data/derived/sp14/progs/unify/prog4421.ml.out
Characters 187-188:
  List.combine (List.rev l1::0) (List.rev l2::0) in
                             ^
Error: This expression has type int but an expression was expected of type
         'a list list
